--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -11,9 +11,9 @@ workflows:
         inputs:
         - version: 3.29.0
         - is_update: 'false'
-    - flutter-analyze@0:
-        inputs:
-        - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
+    # - flutter-analyze@0:
+    #     inputs:
+    #     - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
     - flutter-test@1:
         inputs:
         - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
