--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -11,17 +11,18 @@ workflows:
         inputs:
         - version: 3.29.0
         - is_update: 'false'
-    # - flutter-analyze@0:
-    #     inputs:
-    #     - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
     - flutter-test@1:
         inputs:
         - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
     - flutter-build@0:
         inputs:
         - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
-        - platform: both
-        - ios_output_type: archive
+        - platform: ios
+        - ios_output_type: ipa
+        - distribution_method: app-store
+        - automatic_code_signing: api-key
+        - ios_output_pattern: "*release.ipa"
+        - additional_build_params: "--release --no-codesign"
     - deploy-to-itunesconnect-deliver@2:
         inputs:
           - ipa_path: "$BITRISE_IPA_PATH"
