--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -18,7 +18,7 @@ workflows:
         inputs:
         - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
         - platform: ios
-        - ios_output_type: ipa
+        - ios_output_type: archive
         - distribution_method: app-store
         - automatic_code_signing: api-key
         - ios_output_pattern: "*release.ipa"
