--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -20,6 +20,15 @@ workflows:
     #     - platform: ios
     #     - distribution_method: app-store
     #     - automatic_code_signing: api-key
+    - script@1:
+        title: Flutter Setup
+        inputs:
+          - content: |-
+              #!/bin/bash
+              set -ex
+              cd $BITRISE_FLUTTER_PROJECT_LOCATION
+              flutter clean
+              flutter pub get    
     - xcode-archive@5:
         inputs:
           - project_path: "$BITRISE_FLUTTER_PROJECT_LOCATION"
