--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -11,15 +11,6 @@ workflows:
         inputs:
         - version: 3.29.0
         - is_update: 'false'
-    # - flutter-test@1:
-    #     inputs:
-    #     - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
-    # - flutter-build@0:
-    #     inputs:
-    #     - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
-    #     - platform: ios
-    #     - distribution_method: app-store
-    #     - automatic_code_signing: api-key
     - script@1:
         title: Flutter Setup
         inputs:
@@ -29,6 +20,13 @@ workflows:
               cd $BITRISE_FLUTTER_PROJECT_LOCATION
               flutter clean
               flutter pub get    
+    - flutter-build@0:
+        inputs:
+        - project_location: "$BITRISE_FLUTTER_PROJECT_LOCATION"
+        - platform: ios
+        - ios_output_type: ipa
+        - distribution_method: app-store
+        - automatic_code_signing: api-key              
     - xcode-archive@5:
         inputs:
           - project_path: "$BITRISE_FLUTTER_PROJECT_LOCATION"
