--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -68,5 +68,5 @@ meta:
     machine_type_id: g2-m1.4core
 app:
   envs:
-  - BITRISE_FLUTTER_PROJECT_LOCATION: "./ios/Runner.xcodeproj"
+  - BITRISE_FLUTTER_PROJECT_LOCATION: "./"
   - BITRISE_SCHEME: Runner
