--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -57,6 +57,14 @@ workflows:
               fi
               envman add --key BITRISE_IPA_PATH --value "$IPA_PATH"
               echo "Found IPA at: $IPA_PATH"
+    - script@1:
+        title: Extract Bundle ID
+        inputs:
+          - content: |-
+              #!/bin/bash
+              set -ex
+              BUNDLE_ID=$(xcodebuild -showBuildSettings -project "$BITRISE_PROJECT_PATH" -target "$BITRISE_SCHEME" | grep PRODUCT_BUNDLE_IDENTIFIER | awk -F ' = ' '{print $2}' | tail -n 1)
+              envman add --key BITRISE_APP_BUNDLE_ID --value "$BUNDLE_ID"
     - deploy-to-itunesconnect-deliver@2:
         inputs:
           - ipa_path: "$BITRISE_IPA_PATH"
