--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -6,7 +6,24 @@ workflows:
   deploy:
     steps:
     - git-clone@8: {}
-    - certificate-and-profile-installer@1: {}
+    - script@1:
+        title: Create Keychain
+        inputs:
+          - content: |-
+              #!/bin/bash
+              set -ex
+              security delete-keychain login.keychain-db
+              security create-keychain -p "$BITRISE_KEYCHAIN_PASSWORD" login.keychain-db
+              security default-keychain -s login.keychain-db
+              security unlock-keychain -p "$BITRISE_KEYCHAIN_PASSWORD" login.keychain-db
+              security set-keychain-settings -t 3600 -l login.keychain-db
+    - certificate-and-profile-installer@1:
+        inputs:
+          - certificate_url: "file://./ios/distribution.p12"
+          - provisioning_profile_url: "file://./ios/profile.mobileprovision"
+          - keychain_path: "$HOME/Library/Keychains/login.keychain-db"
+          - keychain_password: "$BITRISE_KEYCHAIN_PASSWORD"
+          - team_id: "$BITRISE_TEAM_ID"
     - flutter-installer@0:
         inputs:
         - version: 3.29.0
@@ -92,3 +109,5 @@ app:
   - BITRISE_FLUTTER_PROJECT_LOCATION: "./"
   - BITRISE_PROJECT_PATH: "./ios/Runner.xcodeproj"
   - BITRISE_SCHEME: Runner
+  - BITRISE_KEYCHAIN_PASSWORD: 123456
+  - BITRISE_TEAM_ID: 22X77ENQ2H
