--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -20,6 +20,7 @@ workflows:
     - certificate-and-profile-installer@1:
         inputs:
           - certificate_url: "file://./ios/distribution.p12"
+          - certificate_passphrase: "123456"
           - provisioning_profile_url: "file://./ios/profile.mobileprovision"
           - keychain_path: "$HOME/Library/Keychains/login.keychain-db"
           - keychain_password: "$BITRISE_KEYCHAIN_PASSWORD"
@@ -109,5 +110,5 @@ app:
   - BITRISE_FLUTTER_PROJECT_LOCATION: "./"
   - BITRISE_PROJECT_PATH: "./ios/Runner.xcodeproj"
   - BITRISE_SCHEME: Runner
-  - BITRISE_KEYCHAIN_PASSWORD: 123456
+  - BITRISE_KEYCHAIN_PASSWORD: 1234
   - BITRISE_TEAM_ID: 22X77ENQ2H
