--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -71,7 +71,7 @@ workflows:
           - automatic_code_signing: api-key
           - cache_level: none
           - certificate_url_list: "file://./ios/distribution.p12"
-          - passphrase_list: ""  # 인증서에 비밀번호가 없는 경우
+          - passphrase_list: "123456"  # 인증서에 비밀번호가 없는 경우
           - keychain_path: "$HOME/Library/Keychains/login.keychain-db"
           - keychain_password: "$BITRISE_KEYCHAIN_PASSWORD"          
     - script@1:
