--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -36,25 +36,25 @@ workflows:
               #!/bin/bash
               set -ex
               
-              # Find .xcodeproj file
-              PROJECT_PATH=$(find . -name "*.xcodeproj" -type d | head -n 1)
+              # iOS 프로젝트 경로 찾기
+              PROJECT_PATH=$(find . -path "*/ios/*.xcodeproj" -type d | head -n 1)
               if [ -z "$PROJECT_PATH" ]; then
-                echo "Error: No Xcode project found"
+                echo "Error: No iOS Xcode project found"
                 exit 1
               fi
               
-              # Get scheme name
+              # 스킴 찾기
               SCHEME=$(xcodebuild -project "$PROJECT_PATH" -list | grep -A 1 "Schemes:" | tail -n 1 | xargs)
               if [ -z "$SCHEME" ]; then
                 echo "Error: No scheme found"
                 exit 1
               fi
               
-              # Export variables
+              # 환경변수 설정
               envman add --key BITRISE_PROJECT_PATH --value "$PROJECT_PATH"
               envman add --key BITRISE_SCHEME --value "$SCHEME"
               
-              echo "Project Path: $PROJECT_PATH"
+              echo "iOS Project Path: $PROJECT_PATH"
               echo "Scheme: $SCHEME"
     - script@1:
         title: Flutter Setup
