--- a/ios/bitrise.yml
+++ b/ios/bitrise.yml
@@ -13,17 +13,17 @@ workflows:
               #!/bin/bash
               set -ex
               security delete-keychain login.keychain-db
-              security create-keychain -p "$BITRISE_KEYCHAIN_PASSWORD" login.keychain-db
+              security create-keychain -p "" login.keychain-db
               security default-keychain -s login.keychain-db
-              security unlock-keychain -p "$BITRISE_KEYCHAIN_PASSWORD" login.keychain-db
+              security unlock-keychain -p "" login.keychain-db
               security set-keychain-settings -t 3600 -l login.keychain-db
     - certificate-and-profile-installer@1:
         inputs:
           - certificate_url: "file://./ios/distribution.p12"
-          - certificate_passphrase: "123456"
+          - certificate_passphrase: "$CERTIFICATE_PASSWORD"
           - provisioning_profile_url: "file://./ios/profile.mobileprovision"
           - keychain_path: "$HOME/Library/Keychains/login.keychain-db"
-          - keychain_password: "$BITRISE_KEYCHAIN_PASSWORD"
+          - keychain_password: ""
           - team_id: "$BITRISE_TEAM_ID"
     - flutter-installer@0:
         inputs:
@@ -98,9 +98,9 @@ workflows:
           - automatic_code_signing: api-key
           - cache_level: none
           - certificate_url_list: "file://./ios/distribution.p12"
-          - passphrase_list: "123456"  # 인증서에 비밀번호가 없는 경우
+          - passphrase_list: "$CERTIFICATE_PASSWORD"
           - keychain_path: "$HOME/Library/Keychains/login.keychain-db"
-          - keychain_password: "$BITRISE_KEYCHAIN_PASSWORD"          
+          - keychain_password: ""
     - script@1:
         title: Set IPA Path
         inputs:
@@ -148,7 +148,5 @@ meta:
 app:
   envs:
   - BITRISE_FLUTTER_PROJECT_LOCATION: "./"
-  # - BITRISE_PROJECT_PATH: "./ios/Runner.xcodeproj"
-  # - BITRISE_SCHEME: Runner
-  - BITRISE_KEYCHAIN_PASSWORD: anything
   - BITRISE_TEAM_ID: 22X77ENQ2H
+  - CERTIFICATE_PASSWORD: 123456
